ChangeLog of simuPOP

BUGS:
  - all known bugs have been cleared.

version 0.7.8 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
  - BUG: fix broken user interactive input
  - BUG: fix help feature of tkinter dialog

version 0.7.7 - (Rev 786) Feb 1, 2007
  -NEW (build): bring scons build system on par with python setup.py
  -NEW (build): scons build now accepts options prefix, include-dirs and library-dirs
  -NEW (build): try really hard to search proper boost libraries. One usually
    does not have to specify boost inc and lib paths to build simuPOP.
  -NEW (build): prune files from source package
  -NEW: add ancestralGen to penetrance and qtrait operators
  -NEW: change pySelector and allow a second parameter gen for the fitness function
        This allows varying selection pressure.
  -CHG: individual comparison does not compare information fields
  -CHG: adjust individual representation (actually output genotype)
  -BUG: fix a bug in loading some files saved in binary module from standard modules
  -BUG: fix an affected sibpair sampler bug introduced in 0.7.5
MPI modules:
  -NEW: add hasInfoField() function
  -NEW: MPI module pass 00, 01, 06 test scripts
  -NEW: Only head node can print to cout
  

version 0.7.6 - (Rev 674) Dec 25, 2006
  -NEW: change file format for binary modules, resulting much faster save/load.
  -NEW: fix adjustGenotype (efficiency)
  -BUG: fix simulator::clone(), introduced in 0.7.5
  -NEW: disable compression under windows due to a boost bug.
  -BUG: make simuRPy works with the latest R and rpy.
  -NEW: several new chapters in the user's guide.


version 0.7.5 - (Rev 576) Dec 8, 2006
  - NEW: experimental MPI modules.
  - BUG: None is treated as False now in Py_Object_As_Bool.
  - NEW: (internal) Optimize binary allele handling. Copying of alleles are now
		faster than regular alleles.
  - NEW (internal): Optimize BernulliTrials and recombination. Recombination